--- a/homework2/задание4/styles.css
+++ b/homework2/задание4/styles.css
@@ -10,8 +10,17 @@ h2 {
     font-size: 24px;
     margin-left: auto;
     margin-right: auto;
-  }
+}
 
+.text_2 {
+    width: 650px;
+    font-size: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    font-style: italic;
+    text-shadow: 1px 1px 2px green;
+}
+  
 .main_img {
     text-align: center;
 }
